core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/ZVC__Zoom_Webinar__c.object-meta.xml
<CustomObject>
    <label>Zoom Webinar</label>
    <nameField>
        <displayFormat>Zoom-Webinar-{0000}</displayFormat>
        <label>Zoom Webinar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>