core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Actual_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Actual_End_Time__c</fullName>
    <label>Actual End Time</label>
    <type>DateTime</type>
</CustomField>