core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Actual_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Actual_Number_of_Participants__c</fullName>
    <label>Actual Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>