core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Add_Registrants_As_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Add_Registrants_As_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Registrants As Campaign Members</label>
    <type>Checkbox</type>
</CustomField>