core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Agenda__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Agenda__c</fullName>
    <label>Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>