core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Allow_Multiple_Devices__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Allow_Multiple_Devices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple Devices</label>
    <type>Checkbox</type>
</CustomField>