core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Approval_Type__c</fullName>
    <label>Approval Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatically Approval</fullName>
            </value>
            <value>
                <fullName>Manually Approval</fullName>
            </value>
            <value>
                <fullName>No Registration Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>