core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Close_Registration_After_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Close_Registration_After_Event_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Registration After Event Date</label>
    <type>Checkbox</type>
</CustomField>