core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Create_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Create_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Campaign</label>
    <type>Checkbox</type>
</CustomField>