core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Create_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Create_New_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create New Lead</label>
    <type>Checkbox</type>
</CustomField>