core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Creation_Status__c</fullName>
    <label>Creation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>