core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration_in_Minutes__c</fullName>
    <label>Duration in Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>