core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Join_Url__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Join_Url__c</fullName>
    <label>Join Url</label>
    <type>TextArea</type>
</CustomField>