core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Panelists_Video_On__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Panelists_Video_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panelists Video On</label>
    <type>Checkbox</type>
</CustomField>