core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Passcode__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Passcode__c</fullName>
    <label>Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>