core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Practice_Session__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Practice_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practice Session</label>
    <type>Checkbox</type>
</CustomField>