core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Register_Url__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Register_Url__c</fullName>
    <label>Register Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>