core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Session_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Session_ID__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>