core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Start_Time__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>