core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planed</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>