core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Topic__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Topic__c</fullName>
    <label>Topic</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>