core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
                <default>true</default>
                <label>Standalone</label>
            </value>
            <value>
                <fullName>Hybrid (event)</fullName>
            </value>
            <value>
                <fullName>Virtual (event)</fullName>
            </value>
            <value>
                <fullName>In-Person (event)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>