core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__UUId__c.field-meta.xml
<CustomField>
    <fullName>ZVC__UUId__c</fullName>
    <label>UUId</label>
    <type>TextArea</type>
</CustomField>