core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__UUId_Unique__c.field-meta.xml
<CustomField>
    <fullName>ZVC__UUId_Unique__c</fullName>
    <externalId>true</externalId>
    <label>UUId Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>