core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Webinar_Id__c</fullName>
    <label>Webinar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>