core/unpackaged/main/default/objects/ZVC__Zoom_Webinar__c/fields/ZVC__Zoom_Event__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Event</label>
    <referenceTo>ZVC__Zoom_Event__c</referenceTo>
    <relationshipLabel>Zoom Webinars</relationshipLabel>
    <relationshipName>Zoom_Webinars</relationshipName>
    <type>Lookup</type>
</CustomField>